--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "test": "jest",
+    "watch": "jest --watchAll",
+    "lint": "eslint ./** --fix"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "pg": "^8.10.0",
     "sequelize": "^6.31.0",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "typescript": "^5.0.4"
   }
 }
