--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --verbose",
     "watch": "jest --watchAll",
     "lint": "eslint ./** --fix"
   },
